[package]
name = "calculator"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/FriquetLuca/rust_calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.16"

[[bin]]
name = "rust_calculator"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
